"link to websites and src of the img chaged"

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <table cellspacing="20">
             <tbody>
                 <tr>
-                    <td><img src="D:\VS CODE PROGRAMS\WEB DEVELOPMENT\Web-Developement-Learn\Udemy Course\images\Sarath Profile Pic.png"></td>
+                    <td><img src="Sarath Profile Pic.png"></td>
                     
                     <td>
                         <h1>Sarath Ra</h1>
@@ -122,9 +122,9 @@
         </table>
 
         <br>
-        <a href="D:\VS CODE PROGRAMS\WEB DEVELOPMENT\Web-Developement-Learn\Udemy Course\HTML Personal Site\hobbies.html">My Hobbies</a>
+        <a href="hobbies.html">My Hobbies</a>
         <br>
-        <a href="D:\VS CODE PROGRAMS\WEB DEVELOPMENT\Web-Developement-Learn\Udemy Course\HTML Personal Site\contactme.html">Contact Me</a>
+        <a href="contactme.html">Contact Me</a>
      
         <br>
     </body>
