"Updated Website name"

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                     
                     <td>
                         <h1>Sarath Ra</h1>
-                        <p><em><strong>Student</strong> and <strong>Developer</strong> <br> B.E Computer Science and Engineering <br> <strong><a href="http://www.psgitech.ac.in/">P.S.G College Of Technology.</a></strong> <br> Coimbatore - 641004</em></p>
+                        <p><em><strong>Student</strong> and <strong>Developer</strong> <br> B.E Computer Science and Engineering <br> <strong><a href="https://www.psgtech.edu/">P.S.G College Of Technology.</a></strong> <br> Coimbatore - 641004</em></p>
                         <p>I am Student at P.S.G College of Technology. Very Passionate in Programming and Developing Web Apps and Android App. Very Passionate to help others with the help of Technology 😎</p>
                     </td>
                 </tr>
@@ -25,7 +25,7 @@
         <ul>
             <li>College</li>
             <ul>
-                <li>B.E Computer Science and Engineering, <strong><a href="http://www.psgitech.ac.in/">P.S.G College Of Technology, Coimbatore</a></strong></li>
+                <li>B.E Computer Science and Engineering, <strong><a href="https://www.psgtech.edu/">P.S.G College Of Technology, Coimbatore</a></strong></li>
             </ul>
             <li>School</li>
             <ul>
